# scribbles-and-specs

./: DEMO_NARRATION.md
Scribbles/: README.md  SecureW2_JoinNow.run  platformio.ini
Scribbles/include/: HBridgeMotor.hpp  PID.hpp  PID_FF.hpp  PathFollowing.hpp  WheelSpeed.hpp
Scribbles/src/: HBridgeMotor.cpp  PID.cpp  PID_FF.cpp  PathFollowing.cpp  WheelSpeed.cpp  main.cpp
Specs/: CMakeLists.txt  README.md  apriltag_test.py  connect-esp32-hotspot.sh  draw_waypoints.py  image_waypoints.py  image_waypoints_test.py  ink_detection.py  ink_detection_test.py  localization.py  localization_result0.txt  localization_result2.txt  localization_result3.txt  localization_result4_star.txt  localization_result6.txt  localization_result8.txt  localization_result9.txt  package.xml  scribbles_driving_test.py  socket_test.py  specs_comms.py  video_display.py
