<?xml version="1.0"?>
<package format="3">
  <name>specs</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Scribbles vision and localization utilities.</description>
  <maintainer email="mbot@example.com">mbot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
